--- a/sass/global/container.scss
+++ b/sass/global/container.scss
@@ -1,9 +1,9 @@
 .container {
-  width: 380px;
+  width: 320px;
   box-sizing: border-box;
   margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
+  // padding-left: 30px;
+  // padding-right: 30px;
 }
 
 @media (min-width: $tablet-width) {
