--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,9 +1,12 @@
 .page-footer {
-  // @include container;
+  padding-left: 30px;
+  padding-right: 30px;
+
   background-color: lighten($dark, 95%);
 }
 .page-footer__social {
   // align-items: center;
+  margin-bottom: 15px;
   border-bottom: 1px solid lighten($dark, 91%);
 }
 .page-footer__logo {
@@ -13,41 +16,46 @@
   @include clear;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
   // align-items: center;
   width: 141px;
+  height: 28px;
   padding-top: 25px;
+  padding-left: 57px;
+  padding-right: 62px;
   padding-bottom: 27px;
-  margin: 0 auto;
 }
 
 .social__link {
   @include clear;
   display: flex;
-  justify-content: space-around;
   vertical-align: bottom;
-  width: 37px;
   height: 28px;
 
-  background-position: 0 0;
+  background-position: 0 bottom;
   background-repeat: no-repeat;
   background-color: lighten($dark, 95%);
 
   &--instagram {
-  background-image: url("../img/icon-insta.svg");
+    width: 22px;
+    background-image: url("../img/icon-insta.svg");
   }
 
   &--facebook {
-  background-image: url("../img/icon-fb.svg");
+    width: 15px;
+    background-image: url("../img/icon-fb.svg");
   }
-  &--twitter {
-  background-image: url("../img/icon-twitter.svg");
-  }
-  &:hover path,
-  &:focus path {
-  fill: rgb(70, 193, 174);
 
-  transition: 0.2s;
+  &--twitter {
+    width: 23px;
+    background-image: url("../img/icon-twitter.svg");
   }
+
+    &:hover path,
+    &:focus path {
+      fill: rgb(70, 193, 174);
+      transition: 0.2s;
+    }
   &:active path {
   fill: rgb(189, 227, 221);
 
@@ -61,9 +69,10 @@
 .page-footer__copyright {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding-top: 26px;
-  padding-bottom: 29px;
+  justify-content: space-between;
+  width: 182px;
+  padding-bottom: 18px;
+  margin: 0 auto;
 }
 
 .copyright__text {
@@ -72,6 +81,7 @@
   font-size: 19px;
   line-height: 18px;
   font-weight: 700;
+  color: $dark;
 
   &:active {
   color: #a8a8a8;
@@ -80,12 +90,14 @@
   }
 }
 .copyright__link {
-  width: 27px;
-  height: 34px;
+  @include clear;
+  width: 40px;
+  height: 46px;
 
   border: none;
   background-image: url("../img/htmlacademy.svg");
-  background-position: 0 0;
+  background-position: 5px 0;
+  background-size: 40px 46px;
   background-repeat: no-repeat;
   background-color: lighten($dark, 95%);
 
