--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -10,13 +10,17 @@
   // background: transparent;
   letter-spacing: 1.2px;
   background-color: rgb(251, 251, 251);
-  background-image: url("../img/hero-mobile@1x.jpg");
+  background-image: url("../img/hero-mobile.jpg");
   background-position: center -30px;
   background-repeat: no-repeat;
   background-size: cover;
   width: 320px;
-  height: 373px;
+  height: 323px;
   padding-bottom: 0;
+
+  @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+    background-image: url("../img/hero-mobile@2x.jpg");
+  }
   &--catalog {
     padding-top: 73px;
     padding-bottom: 78px;
